[package]
name = "media-tools"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
lazy-regex = "3"
log = "0.4"
simplelog = { version = "0.12", features = ["paris"] }

[profile.release]
panic = "abort"
codegen-units = 1
strip = true
lto = true
